add dockerfile and infrastructure

--- a/MeetMe.Agents.Api/appsettings.docker.json
+++ b/MeetMe.Agents.Api/appsettings.docker.json
@@ -5,9 +5,9 @@
   },
   "consul": {
     "enabled": true,
-    "url": "http://localhost:8500",
+    "url": "http://consul:8500",
     "service": "agents-service",
-    "address": "docker.for.win.localhost",
+    "address": "agents-service",
     "port": "5001",
     "pingEnabled": true,
     "pingEndpoint": "ping",
@@ -16,7 +16,7 @@
   },
   "fabio": {
     "enabled": true,
-    "url": "http://localhost:9999",
+    "url": "http://fabio:9999",
     "service": "agents-service"
   },
   "httpClient": {
@@ -40,7 +40,7 @@
     },
     "seq": {
       "enabled": false,
-      "url": "http://localhost:5341",
+      "url": "http://seq:5341",
       "apiKey": "secret"
     }
   },
@@ -58,12 +58,12 @@
     "influxEnabled": false,
     "prometheusEnabled": true,
     "influxUrl": "http://influx:8086",
-    "database": "meetMe",
+    "database": "meetme",
     "env": "docker",
     "interval": 5
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
+    "connectionString": "mongodb://mongo:27017",
     "database": "agents-service",
     "seed": false
   },
@@ -80,7 +80,7 @@
     "virtualHost": "/",
     "port": 5672,
     "hostnames": [
-      "localhost"
+      "rabbitmq"
     ],
     "requestTimeout": "00:00:10",
     "publishConfirmTimeout": "00:00:01",
